# Ruggine

./: .gitignore  Cargo.toml  README.md  Readme.md  Todo.md
migrations/: 20250722205224_crea_tabelle_iniziali.sql  20250722212457_crea_tabella_inviti.sql
ruggine_client/: Cargo.toml
ruggine_client/src/: draw.rs  handlers.rs  handlers_client.rs  main.rs  main_client.rs  models.rs  models_client.rs
ruggine_server/: .env  Cargo.toml
ruggine_server/migrations/: 20250728190339_crea_schema_completo.sql  20250810_schema_migration.sql  ruggine.sqlite  schema_migration.sql
ruggine_server/src/: auth.rs  db.rs  error.rs  handlers.rs  main.rs  models.rs
src/: handlers.rs  main.rs  models.rs
