[package]
name = "Ruggine"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework e gestione asincrona
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.37.0", features = ["full"] }

# Database (PostgreSQL)
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "postgres", "uuid", "time" ] }

# Serializzazione e Deserializzazione JSON
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

# Gestione delle configurazioni (dal file .env)
dotenvy = "0.15.7"

# Gestione degli UUID
uuid = { version = "1.8.0", features = ["v4", "serde"] }

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "fmt"] }
tracing-appender = "0.2.3"

# Per il logging della CPU
sys-info = "0.9.1"

time = { version = "0.3.36", features = ["serde"] }
