[package]
name = "ruggine_client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Per la GUI
eframe = "0.28.1"
egui = "0.28.1"

# Per le chiamate HTTP e la gestione asincrona
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json"] }

# Per i WebSocket
tokio-tungstenite = { version = "0.23.0", features = ["native-tls"] }
futures-util = "0.3.30"

# Utilities
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["v4", "serde"] }