[package]
name = "ruggine_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "sqlite", "uuid", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["macros", "serde", "formatting", "parsing"] }
dotenvy = "0.15"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
#dotenvy = "0.15.7"
#uuid = { version = "1.8.0", features = ["v4", "serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "fmt"] }
tracing-appender = "0.2.3"
sys-info = "0.9.1"
dashmap = "5.5.3"
futures-util = "0.3.30"
bcrypt = "0.15"
jsonwebtoken = "9.3"
chrono = { version = "0.4", features = ["serde"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
sysinfo = "0.30"
cpu-time = "1.0.0"

